--- a/Dark-Mode-Js/style.css
+++ b/Dark-Mode-Js/style.css
@@ -363,7 +363,7 @@ nav ul li:hover {
   }
 
   /* for Tablet */
-  @media screen and (max-width: 768px) {
+  @media screen and (max-width: 786px) {
 
     html {
       font-size: 14px;
@@ -390,4 +390,55 @@ nav ul li:hover {
       font-size: 2.5rem;
     }
 
+  }
+
+  /* For Mobile */
+  @media screen and (max-width: 480px) {
+
+    html {
+      font-size: 12px;
+    }
+
+    .theme-switch {
+      --toggle-size: 10px;
+    }
+
+    .info-section {
+      margin-top: 10rem;
+      margin-left: 2rem;
+      column-gap: 1.5rem;
+    }
+
+    .info {
+      padding-right: 1.5rem;
+    }
+
+    .info p {
+      padding-bottom: 2rem;
+    }
+
+    .svg-img {
+      top: 20px;
+      left: -20px;
+    }
+
+    .svg-img svg {
+      width: 200px;
+      height: 200px;
+    }
+
+    .svg-img img {
+      top: 30px;
+      left: 35px;
+      width: 125px;
+      height: 125px;
+    }
+
+    .contact {
+      margin-top: 3.5rem;
+    }
+
+    .contact i {
+      font-size: 3rem;
+    }
   }
