--- a/Dark-Mode-Js/style.css
+++ b/Dark-Mode-Js/style.css
@@ -9,7 +9,7 @@
     --teritary-: #f9bc60;
 }
 
-.dark-mode {
+.dark-theme {
   --background-: #272343;
   --headline-: #fffffe;
   --paragraph-: #fffffe;
