--- a/Image-Gallery-Js/style.css
+++ b/Image-Gallery-Js/style.css
@@ -5,7 +5,7 @@
   body {
     margin: 0;
     font-family: sans-serif;
-    background: #f5f6f7;
+    background: hsl(210, 11%, 96%);
   }
   
   .header {
@@ -16,36 +16,58 @@
     color: #fff;
     border-bottom: 4px solid #fdb347;
   }
-  
+
   .gallery {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 900px;
+    margin: auto;
     display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    justify-content: center;
     align-items: center;
-    gap: 20px;
-    max-width: 1400px;
-    margin: 0 auto;
-    padding: 25px 10px;
-  }
-  
-  .gallery img {
-    width: 100%;
-    max-width: 350px;
-    height: 300px;
-    object-fit: cover;
-    border-radius: 10px;
-    filter: grayscale(100%);
-  }
-  
-  .gallery::after {
-    content: "";
-    width: 350px;
+    gap: 10px;
   }
 
-  .gallery img:hover {
-    filter: grayscale(0);
-    transition: 0.8s;
+  button {
+    padding: 10px 20px;
+    background-color: #0a0a23;
+    color: #fff;
+    border: none;
+    border-radius: 10%;
     cursor: pointer;
-    transform: scale(1.1);
   }
+
+  .gallery-container {
+    overflow-x: auto;
+    display: flex;
+    gap: 20px;
+    padding: 10px;
+  }
+
+  .gallery-container::-webkit-scrollbar {
+    display: none;
+  }
+
+  .gallery-container img {
+    min-width: 150px;
+    object-fit: cover;
+  }
+
+  /* For Tablet */
+  @media (max-width: 820px) {
+    .gallery {
+        width: 600px;
+    }
+  }
+
+  /* For Mobile */
+  @media (max-width: 480px) {
+    .gallery {
+        width: 300px;
+    }
+
+    button {
+        padding: 5px 10px;
+    }
+  } 
