--- a/Image-Gallery-Js/style.css
+++ b/Image-Gallery-Js/style.css
@@ -11,7 +11,7 @@
   .header {
     text-align: center;
     text-transform: uppercase;
-    padding: 32px;
+    padding: 25px;
     background-color: #0a0a23;
     color: #fff;
     border-bottom: 4px solid #fdb347;
@@ -80,4 +80,66 @@
     button {
         padding: 5px 10px;
     }
-  } 
+  }
+
+  .lightbox {
+    position: fixed;
+    max-width: 700px;
+    width: 100%;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background: #fff;
+    padding: 0 5px 5px 5px;
+    border-radius: 4px;
+    box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.2);
+  }
+
+  .lightbox .details {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 12px 15px 12px 10px;
+  }
+
+  .details .title {
+    display: flex;
+    font-size: 18px;
+    font-weight: 400;
+  }
+
+  .details .title p {
+    margin: 0 5px;
+  }
+
+  .details .title p.current-img {
+    font-weight: 700;
+  }
+
+  .lightbox .img-box {
+    display: flex;
+    width: 100%;
+  }
+
+  .img-box .slide {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translateY(-50%);
+    font-size: 30px;
+    cursor: pointer;
+    color: #fff;
+  }
+
+  .img-box .slide.prev {
+    left: 0;
+  }
+
+  .img-box .slide.next {
+    right: 0;
+  }
+
+  .lightbox img {
+    width: 100%;
+    border-radius: 0 0 3px 3px;
+  }
