--- a/Image-Gallery-Js/style.css
+++ b/Image-Gallery-Js/style.css
@@ -93,6 +93,8 @@
     padding: 0 5px 5px 5px;
     border-radius: 4px;
     box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.2);
+    opacity: 0;
+    pointer-events: none;
   }
 
   .lightbox .details {
@@ -106,6 +108,12 @@
     display: flex;
     font-size: 18px;
     font-weight: 400;
+  }
+
+  .lightbox .details .icon {
+    color: #007bff;
+    cursor: pointer;
+    font-size: 20px;
   }
 
   .details .title p {
@@ -128,6 +136,10 @@
     font-size: 30px;
     cursor: pointer;
     color: #fff;
+    width: 60px;
+    height: 50px;
+    line-height: 50px;
+    text-align: center;
   }
 
   .img-box .slide.prev {
