--- a/Image-Gallery-Js/style.css
+++ b/Image-Gallery-Js/style.css
@@ -87,13 +87,20 @@
     width: 100%;
     top: 50%;
     left: 50%;
-    transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%) scale(0.9);
     background: #fff;
     padding: 0 5px 5px 5px;
     border-radius: 4px;
     box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.2);
     opacity: 0;
     pointer-events: none;
+  }
+
+  .lightbox.active {
+    opacity: 1;
+    pointer-events: auto;
+    transform: translate(-50%, -50%) scale(1);
+    transition: all 0.5s ease;
   }
 
   .lightbox .details {
