--- a/Image-Search-Engine/style.css
+++ b/Image-Search-Engine/style.css
@@ -8,10 +8,65 @@
 body {
     background-image: radial-gradient( circle farthest-corner at 10% 20%,  rgba(117,86,204,1) 0%, rgba(213,105,167,1) 90% );
     color: #fff;
+    font-size: 18px;
 }
 
 h1 {
     text-align: center;
     margin: 7rem 0 3rem;
     font-weight: 600;
+}
+
+form {
+    width: 90%;
+    max-width: 550px;
+    margin: auto;
+    background-image: radial-gradient( circle farthest-corner at 10% 20%,  rgba(100,43,115,1) 0%, rgba(4,0,4,1) 90% );
+    height: 5rem;
+    display: flex;
+    align-items: center;
+    border-radius: 10px;
+}
+
+form input {
+    flex: 1;
+    height: 100%;
+    border: 0;
+    outline: 0;
+    background: transparent;
+    color: #fff;
+    font-size: 1.1rem;
+    padding: 0 1.5rem;
+    border-radius: 10px;
+}
+
+::placeholder {
+    color: #fff;
+    font-size: 1rem;
+}
+
+form button {
+    height: 100%;
+    padding: 0 1.5rem;
+    background-image: radial-gradient( circle 887px at -13.8% 18.3%,  rgba(8,208,115,1) 0%, rgba(0,0,0,1) 90% );
+    border: 0;
+    outline: 0;
+    font-size: 1.1rem;
+    color: #fff;
+    cursor: pointer;
+    border-top-right-radius: 10px;
+    border-bottom-right-radius: 10px;
+}
+
+#show-more-btn {
+    display: none;
+    margin: 2rem auto;
+    padding: 0.5rem 1rem;
+    background-image: radial-gradient( circle 887px at -13.8% 18.3%,  rgba(8,208,115,1) 0%, rgba(0,0,0,1) 90% );
+    border: 0;
+    outline: 0;
+    font-size: 1.1rem;
+    color: #fff;
+    cursor: pointer;
+    border-radius: 10px;
 }
