--- a/Responsive/style.css
+++ b/Responsive/style.css
@@ -34,6 +34,14 @@ header li {
     height: 50px;
 }
 
+header li:first-child {
+    margin-right: auto;
+}
+
+header li:first-child span::after {
+    display: none !important;
+}
+
 header a {
     text-decoration: none;
     height: 100%;
@@ -62,4 +70,57 @@ header span::after {
 header span:hover::after {
     transform: scaleX(1);
     transition: transform 0.25s ease-out;
+}
+
+.side-bar {
+    position: fixed;
+    top: 0;
+    right: 0;
+    height: 100vh;
+    width: 250px;
+    z-index: 1000;
+    background-color: rgba(255, 255, 255, .1);
+    backdrop-filter: blur(10px);
+    box-shadow: -10px 0 10px rgba(0, 0, 0, 0.1);
+    display: none;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: flex-start;
+}
+
+.side-bar ul {
+    width: 100%;
+}
+
+.side-bar a {
+    width: 100%;
+}
+
+.menu-btn {
+    display: none;
+}
+
+@media (max-width: 768px) {
+
+    .hideOnMobile {
+        display: none;
+    }
+
+    .menu-btn {
+        display: block;
+    }
+}
+
+@media (max-width: 480px) {
+    html {
+        font-size: 14px;
+    }
+
+    .hideOnMobile {
+        display: none;
+    }
+
+    .menu-btn {
+        display: block;
+    }
 }
