--- a/Loading-Effect/style.css
+++ b/Loading-Effect/style.css
@@ -4,6 +4,15 @@
     box-sizing: border-box;
 }
 
+html {
+    font-size: 16px;
+    font-family: 'Arial', sans-serif;
+}
+
+body {
+    height: 100vh;
+    }
+
 .loader {
     width: 48px;
     height: 48px;
