--- a/Loading-Effect/style.css
+++ b/Loading-Effect/style.css
@@ -13,6 +13,18 @@ body {
     height: 100vh;
     }
 
+.preloader-wrapper {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #000;
+}
+
 .loader {
   width: 48px;
   height: 48px;
