--- a/Image-Gallery-Js/style.css
+++ b/Image-Gallery-Js/style.css
@@ -85,6 +85,7 @@
     position: fixed;
     max-width: 700px;
     width: 100%;
+    height: auto;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%) scale(0.9);
