--- a/Search-Filter/style.css
+++ b/Search-Filter/style.css
@@ -3,3 +3,99 @@
     padding: 0;
     box-sizing: border-box;
 }
+
+html {
+    font-size: 16px;
+    font-family: 'Arial', sans-serif;
+}
+
+body {
+    background-color: #f4f4f4;
+    min-height: 100vh;
+}
+
+header {
+    background-color: #0f0e17;
+    display: flex;
+    justify-content: space-between;
+    text-align: center;
+}
+
+header h2 {
+    color: #fff;
+    position: relative;
+    top: 20%;
+    left: 35%;
+}
+
+.nav-links ul{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    list-style: none;
+}
+
+.nav-links li {
+    height: 50px;
+}
+
+.nav-links a {
+    text-decoration: none;
+    height: 100%;
+    padding: 0 30px;
+    display: inline-block;
+    line-height: 50px;
+    color: #fff;
+    position: relative;
+}
+
+.nav-links a::after {
+    content: '';
+    position: absolute;
+    bottom: 10px;
+    left: 0;
+    height: 3px;
+    width: 100%;
+    background-color: #fff;
+    transform: scaleX(0);
+    transition: transform 0.25s ease-out;
+}
+
+.nav-links a:hover::after {
+    transform: scaleX(1);
+    transform-origin: bottom center;
+}
+
+.nav-links .search-bar {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding-right: 1rem;
+}
+
+.search-bar input {
+    padding: 0.5rem;
+    border: none;
+    outline: none;
+    border-radius: 5px;
+    width: 170px;
+    transition: width 0.3s ease-in-out;
+}
+
+.search-bar button {
+    background-color: #fff;
+    border: none;
+    padding: 0.5rem 1rem;
+    border-radius: 5px;
+    cursor: pointer;
+    margin-left: 0.5rem;
+}
+
+.side-bar {
+    position: fixed;
+    top: 0;
+    right: 0;
+    height: 100vh;
+    width: 250px;
+    z-index: 5;
+}
