--- a/Search-Filter/style.css
+++ b/Search-Filter/style.css
@@ -28,6 +28,10 @@ header h2 {
     left: 35%;
 }
 
+.nav-links {
+    display: block;
+}
+
 .nav-links ul{
     list-style: none;
     width: 100%;
@@ -71,3 +75,105 @@ header .underline:hover::after {
     transform-origin: bottom center;
 }
 
+.search-bar {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding-right: 1rem;
+}
+
+.search-bar input {
+    width: 175px;
+    padding: 0.4rem;
+    border: none;
+    border-radius: 5px;
+    outline: none;
+    font-size: 1rem;
+}
+
+.search-bar button {
+    background-color: #fff;
+    color: #0f0e17;
+    font-weight: 600;
+    border: none;
+    padding: 0.4rem 1rem;
+    border-radius: 5px;
+    cursor: pointer;
+    margin-left: 0.5rem;
+}
+
+.search-bar button:hover {
+    background-color: #cfcfcf;
+    transition: all 0.3s ease-in-out;
+}
+
+.nav-links .side-bar {
+    position: fixed;
+    top: 0;
+    right: 0;
+    width: 280px;
+    height: 100vh;
+    background-color: rgba(15, 14, 23, 1);
+    /* backdrop-filter: blur(10px); */
+    box-shadow: -2px 0 10px 5px rgba(0, 0, 0, 0.5);
+    z-index: 5;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: flex-start;
+    opacity: 0;
+    transform: translateX(100%);
+    transition: opacity 0.3s ease, transform 0.3s ease;
+}
+
+.side-bar li {
+    width: 100%;
+    padding: 1rem 0;
+    text-align: center;
+    background-color: #0f0e17;
+    transition: all 0.3s ease-in-out;
+}
+
+.side-bar li:first-child {
+    width: auto;
+}
+
+.side-bar li:hover:not(:first-child ,:last-child) {
+    background-color: #292838;
+    transition: all 0.3s ease-in-out;
+}
+
+.menu-btn {
+    display: none;
+}
+
+@media (max-width: 768px) {
+
+    html {
+        font-size: 14px;
+    }
+
+    .hideOnMobile {
+        display: none;
+    }
+
+    .menu-btn {
+        display: block;
+    
+    }
+}
+
+@media (max-width: 480px) {
+
+    html {
+        font-size: 12px;
+    }
+    
+        .hideOnMobile {
+            display: none;
+        }
+    
+        .menu-btn {
+            display: block;
+        }
+}
