--- a/Search-Filter/style.css
+++ b/Search-Filter/style.css
@@ -193,6 +193,13 @@ main {
     padding: 6rem 3rem;
 }
 
+.products img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border-radius: .5rem;
+}
+
 .card {
     width: 190px;
     height: 254px;
